# mipt-build-systems

./: README.md
task1/: CMakeLists.txt
task1/A/: index.h  preparing.py
task1/B/: CMakeLists.txt  Makefile  cmake_install.cmake  lib.cpp
task1/C/: main.cpp  main.h
task2/ddir/: Dockerfile
task3/TechProgSimpleLibrary/: .CMakeLists.txt.swp  CMakeLists.txt  Toolchain.cmake
task3/TechProgSimpleLibrary/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
task3/TechProgSimpleLibrary/bld/src/: Makefile  cmake_install.cmake
task3/TechProgSimpleLibrary/src/: CMakeLists.txt
task4/: CMakeLists.txt  gen_matrix.py  no_codegen.cpp  opencv.py  with_codegen.cpp
